[gd_scene load_steps=7 format=3 uid="uid://bcdug8ct1087b"]

[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Sprite_Template.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c0mw0jwbq1np4" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://c7c0ymusji584" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Number_Counter_Float.tscn" id="3_0xe30"]
[ext_resource type="Texture2D" uid="uid://drn7pem71psym" path="res://fart_data/png/AwesomeUnicorn (copy).png" id="3_4jusd"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="5"]

[sub_resource type="SpriteFrames" id="3"]

[node name="Sprite_Template" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("2")
label_text = "Sprite_Template"
metadata/_edit_vertical_guides_ = [-175.0]

[node name="Label" parent="." instance=ExtResource("5")]
layout_mode = 2

[node name="StandardControlsHBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpriteAtlasHBox" type="HBoxContainer" parent="StandardControlsHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpriteAtlasVBox" type="VBoxContainer" parent="StandardControlsHBox/SpriteAtlasHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="ColorRect" parent="StandardControlsHBox/SpriteAtlasHBox/SpriteAtlasVBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0.266667, 0.321569, 1)

[node name="Label2" type="Label" parent="StandardControlsHBox/SpriteAtlasHBox/SpriteAtlasVBox/Label2" groups=["Label"]]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "Sprite Atlas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBox1" type="VBoxContainer" parent="StandardControlsHBox/SpriteAtlasHBox/SpriteAtlasVBox"]
layout_mode = 2

[node name="VBox1" type="HBoxContainer" parent="StandardControlsHBox/SpriteAtlasHBox/SpriteAtlasVBox/VBox1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VFrames" parent="StandardControlsHBox/SpriteAtlasHBox/SpriteAtlasVBox/VBox1/VBox1" instance=ExtResource("3_0xe30")]
layout_mode = 2
is_int = true
can_be_negative = false
label_text = "V Frames"
is_label_button = false

[node name="HFrames" parent="StandardControlsHBox/SpriteAtlasHBox/SpriteAtlasVBox/VBox1/VBox1" instance=ExtResource("3_0xe30")]
layout_mode = 2
is_int = true
can_be_negative = false
label_text = "H Frames"
is_label_button = false

[node name="Input" type="TextureButton" parent="StandardControlsHBox/SpriteAtlasHBox/SpriteAtlasVBox"]
show_behind_parent = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("3_4jusd")
ignore_texture_size = true
stretch_mode = 5

[node name="Space3" type="Label" parent="StandardControlsHBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewVBox" type="VBoxContainer" parent="StandardControlsHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label3" type="ColorRect" parent="StandardControlsHBox/PreviewVBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0.266667, 0.321569, 1)

[node name="Label2" type="Label" parent="StandardControlsHBox/PreviewVBox/Label3" groups=["Label"]]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "Preview"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="StandardControlsHBox/PreviewVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PreviewWindow" type="VBoxContainer" parent="StandardControlsHBox/PreviewVBox/Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AdvancedControlsVBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" parent="AdvancedControlsVBox" instance=ExtResource("5")]
layout_mode = 2

[node name="Label_Button" parent="AdvancedControlsVBox/Label/HBox1" index="0" groups=["Sub Label 1"]]

[node name="Hide_Button" parent="AdvancedControlsVBox/Label/HBox1" index="1"]
visible = true

[node name="AdvancedControlsHBox" type="HBoxContainer" parent="AdvancedControlsVBox"]
layout_mode = 2

[node name="BeginFrame" parent="AdvancedControlsVBox/AdvancedControlsHBox" instance=ExtResource("3_0xe30")]
layout_mode = 2
is_int = true
can_be_negative = false
label_text = "Begin Frame"
is_label_button = false

[node name="EndFrame" parent="AdvancedControlsVBox/AdvancedControlsHBox" instance=ExtResource("3_0xe30")]
layout_mode = 2
is_int = true
can_be_negative = false
label_text = "End Frame"
is_label_button = false

[node name="FPS" parent="AdvancedControlsVBox/AdvancedControlsHBox" instance=ExtResource("3_0xe30")]
layout_mode = 2
size_flags_stretch_ratio = 0.5
is_int = true
can_be_negative = false
label_text = "FPS"
is_label_button = false

[node name="FrameHeight" parent="AdvancedControlsVBox/AdvancedControlsHBox" instance=ExtResource("3_0xe30")]
layout_mode = 2
is_int = true
can_be_negative = false
label_text = "Frame Height"
is_label_button = false

[node name="FrameWidth" parent="AdvancedControlsVBox/AdvancedControlsHBox" instance=ExtResource("3_0xe30")]
layout_mode = 2
is_int = true
can_be_negative = false
label_text = "Frame Width"
is_label_button = false

[node name="input_templateBuffer" parent="." instance=ExtResource("3")]
layout_mode = 2

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(4, 29)
sprite_frames = SubResource("3")
centered = false

[connection signal="button_up" from="StandardControlsHBox/SpriteAtlasHBox/SpriteAtlasVBox/Input" to="." method="_on_TextureButton_button_up"]
[connection signal="resized" from="StandardControlsHBox/PreviewVBox/Control/PreviewWindow" to="." method="_on_preview_window_resized"]
[connection signal="button_down" from="AdvancedControlsVBox/Label/HBox1/Hide_Button" to="." method="_on_hide_advanced_button_up"]

[editable path="Label"]
[editable path="AdvancedControlsVBox/Label"]
